# pwick

./: .editorconfig  .gitignore  AUDIT_REPORT.md  BUILD.md  CHANGELOG.md  LICENSE  MANIFEST.in  QUICKREF.md  README.md  RELEASE_v1.0.0.md  SECURITY.md  STATUS.md  TESTING.md  build.sh  build_exe.bat  build_exe.sh  install.bat  install.sh  pwick.spec  pyproject.toml  requirements.txt  run_pwick.bat  run_pwick.sh  setup.py  uninstall.bat  uninstall.sh
docs/: CLIPBOARD_HISTORY.md  ENHANCED_FEATURES.md  IMPLEMENTATION_SUMMARY.md  SYSTEM_TRAY_ENCRYPTED_CLIPBOARD.md  demo_clipboard_history.py  demo_features.py
src/pwick/: __init__.py  __main__.py  backup.py  config.py  logging_config.py  system_theme.py  ui.py  vault.py
src/pwick/importers/: __init__.py  bitwarden_importer.py  csv_importer.py  keepass_importer.py  lastpass_importer.py  onepassword_importer.py
src/pwick/ui/: __init__.py  main_window.py  themes.py
src/pwick/ui/widgets/: __init__.py  backup_manager_dialog.py  command_palette_dialog.py  entry_dialog.py  import_wizard_dialog.py  master_password_dialog.py  password_history_dialog.py  password_strength_widget.py  security_audit_dialog.py  settings_dialog.py  tag_manager_dialog.py  welcome_dialog.py
tests/: test_backup.py  test_config.py  test_importers.py  test_integration.py  test_logging.py  test_system_theme.py  test_ui_widgets.py  test_vault.py
